log/build_2024-06-27_13-17-55/cgsr1_pkg/stderr.log
  File "/home/snowlar/Desktop/SNOWLAR/install/cgsr1_pkg/lib/python3.10/site-packages/cgsr1_pkg/web_interface.py", line 107
    @def calibrate():
     ^^^
SyntaxError: invalid syntax

